--- a/templates/login.html
+++ b/templates/login.html
@@ -42,7 +42,7 @@
 						</div>
 						<div class="form-group">
 							<label for="pwd">Password:</label>
-							<input type="password" class="form-control" id="pwd">
+							<input type="password" class="form-control" id="pwd" name="pwd">
 						</div>
 						<div class="form-group form-check">
 							<label class="form-check-label">
