--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,8 @@
 		<script src="static/js/bootstrap.min.js"></script>
 	</head>
 	<body>
-		<div class="container">
+		<div class="container-fluid">
+			<br>
 			<div class="toast" data-autohide="false">
 				<div class="toast-header">
 					<strong class="mr-auto text-primary">Select Login type</strong>
