--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -21,13 +21,13 @@
 								<form name="add" method="post" action="/add">
 									<div class="form-group">
 										<label for="driver">Driver Name:</label>
-										<input type="text" class="form-control" id="driver" name="driver">
+										<input type="text" class="form-control" id="driver" name="driver" required>
 									</div>
 									<div class="form-group">
 										<label for="pwd">Phone:</label>
-										<input type="phone" class="form-control" id="phone" name="phone">
+										<input type="phone" class="form-control" id="phone" name="phone" required>
 									</div>
-									<button type="submit" class="btn btn-primary">Submit</button>
+									<button type="submit" class="btn btn-primary">Add</button>
 								</form>
 						</div>
 					</div>
