--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -29,6 +29,10 @@
 								<label for="pwd">Phone:</label>
 								<input type="phone" class="form-control" id="phone" name="phone" required>
 							</div>
+							<div class="form-group">
+									<label for="pwd">Location:</label>
+									<input type="location" class="form-control" id="location" name="location">
+								</div>
 							<button type="submit" class="btn btn-primary">Modify</button>
 						</form>
 					</div>
@@ -58,6 +62,10 @@
 										<label for="pwd">Phone:</label>
 										<input type="phone" class="form-control" id="phone" name="phone" required>
 									</div>
+									<div class="form-group">
+											<label for="pwd">Location:</label>
+											<input type="text" class="form-control" id="location" name="location">
+										</div>
 									<button type="submit" class="btn btn-primary">Add</button>
 								</form>
 						</div>
@@ -71,17 +79,20 @@
 						<tr>
 							<th>Driver</th>
 							<th>Phone Number</th>
+							<th>Location</th>
 							<th></th>
 							<th></th>
 						</tr>
 					</thead>
 					<tbody>
-						{% for amb_id, driver, phone, is_booked in ambulances %}
+						{% for amb_id, driver, phone, location, is_booked, owner in ambulances %}
 						<tr>
 							<td>{{driver}}</td>
 							<td>{{phone}}</td>
+							<td>{{location}}</td>
 							<td>
-								<button onclick="update_val('{{amb_id}}','{{driver}}','{{phone}}')" 
+								<button onclick="update_val(
+									'{{amb_id}}','{{driver}}','{{phone}}','{{location}}')" 
 									class="btn btn-info" class="btn btn-info btn-lg"
 								 data-toggle="modal" data-target="#myModal">Modify</button>
 								</td>
@@ -89,12 +100,12 @@
 						</tr>
 						{% endfor %}
 						<script>
-							function update_val(amb_id,driver,phone){
-								console.log("ran");
+							function update_val(amb_id,driver,phone,location){
 								var f = document.forms['modify'];
 								f.elements['amb_id'].value = amb_id;
 								f.elements['driver'].value = driver;
 								f.elements['phone'].value = phone;
+								f.elements['location'].value = location;
 							}
 						</script>
 					</tbody>
